# form_checker

./: .env  .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: web-app.docker
service/form_checker/: apps.py  services.py  tests.py  urls.py  views.py
service/form_checker/management/commands/: add_fake_forms.py
service/service/: settings.py  urls.py
