[tool.poetry]
name = "form-checker"
version = "0.1.0"
description = ""
authors = ["Roman Slyusar <slyusarrv@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.16"
python-dotenv = "^0.21.0"
djongo = "^1.3.6"
pymongo = "3.12.3"
faker = "^15.3.4"
isort = "^5.11.4"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
